--- a/style.css
+++ b/style.css
@@ -1,68 +1,93 @@
-h1{ 
-    color: rgb(0, 0, 0);
 
 
+h1, h2 {
+    font-weight: 600; 
 }
 
-section{
-    margin: 20px;
-    padding: 20px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 px 0px 10px rgba(0, 0, 0, 0.1);
-
+h1 a {
+    color: #d1b6ff; 
+    text-decoration: none; 
 }
 
-footer{
-    text-align: center;
-    padding: 10px;
+h1 a:hover {
+    color: #717171; 
+}
+
+.title {
+    text-align: end;
+    font-size: 2rem;
+    margin-top: 20px;
 }
 
 
-
-
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+body {
+    font-family: 'Roboto Condensed', sans-serif;
+    background-color: rgb(2, 2, 2);
+    color: rgb(243, 243, 243);
+    line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: rgba(255, 255, 255, 0.685);
-    color: rgb(0, 0, 0);
-
-
-
-
 }
 
 
-
-.foto-perfil{
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    border: 5px solid rgb(0, 0, 0); 
+header {
+    position: relative;
+    background-color: rgb(27, 27, 27); 
+    background-image: url('/back.jpg'); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    overflow: hidden;
 }
 
-header{
 
-
-
-
-
-
-
-
+header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 0;
 }
 
 
 .header-container {
-    display: flex;
-    justify-content: center;  /* Centraliza horizontalmente */
-    align-items: center;      /* Centraliza verticalmente */
-    height: 100vh;            /* Ocupa toda a altura da tela */
-  }
-  
-  .header-container {
-    width: 200px;
-    height: 200px;
-    background-color: lightblue;
-  }
+    position: relative;
+    z-index: 1;
+}
+
+.foto-perfil{
+    width: 250px;
+    height: 250px;
+    border-radius: 500%;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
+
+
+}
+
+
+section {
+    margin:20px;
+    padding: 20px;
+    background: rgb(27, 27, 27);
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+footer{
+    background: #222;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    
+}
