--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 header {
     position: relative;
     background-color: rgb(27, 27, 27); 
-    background-image: url('/back.jpg'); 
+    background-image: url('back.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
